--- a/tox.ini
+++ b/tox.ini
@@ -17,5 +17,5 @@ deps = -r {toxinidir}/requirements.txt
 
 commands =
   python --version
-  isort -c src
-  pylint src
+  isort -c ws_lib
+  pylint ws_lib
